--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
-#media
+media
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
