--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ algorithmia==0.9.0
 Django==1.8.3
 django-bootstrap3==6.1.0
 django-floppyforms==1.5.2
+django-leaflet==0.16.0
 django-registration-redux==1.2
 factory-boy==2.5.2
 fake-factory==0.5.2
