--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ algorithmia==0.9.0
 Django==1.8.3
 django-bootstrap3==6.1.0
 django-floppyforms==1.5.2
+django-geojson==2.8.1
 django-leaflet==0.16.0
 django-registration-redux==1.2
 factory-boy==2.5.2
@@ -11,5 +12,6 @@ ipython==3.2.1
 Pillow==2.9.0
 psycopg2==2.6.1
 requests==2.7.0
+six==1.9.0
 sorl-thumbnail==12.3
 wheel==0.24.0
