--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 algorithmia==0.9.0
+dj-database-url==0.3.0
 Django==1.8.3
 django-bootstrap3==6.1.0
 django-floppyforms==1.5.2
@@ -9,8 +10,12 @@ factory-boy==2.5.2
 fake-factory==0.5.2
 Faker==0.0.4
 ipython==3.2.1
+Jinja2==2.8
+MarkupSafe==0.23
 Pillow==2.9.0
 psycopg2==2.6.1
+pylibmc==1.5.0
+python-memcached==1.56
 requests==2.7.0
 six==1.9.0
 sorl-thumbnail==12.3
